base/message-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
  namespace: XAM-messanger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      containers:
        - name: message-service
          image: mablinov2704/message-service:latest
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: message-uploads-pvc
