base/bff-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff
  namespace: XAM-messanger
spec:
  selector:
    app: bff
  ports:
    - name: http
      port: 8080
      targetPort: 8080
