base/message-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-service
  namespace: XAM-messanger
spec:
  selector:
    app: message-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
