base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: XAM-messanger
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
