base/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: XAM-messanger
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
