base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messanger-ingress
  namespace: XAM-messanger
spec:
  ingressClassName: nginx
  rules:
    - host: messanger.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
